--- a/style.css
+++ b/style.css
@@ -2,33 +2,33 @@
     margin: 0px;
 
 }
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
 body{
     background-color: rgb(235, 235, 235);
     
 }
 .card{
     margin: 100px 100px;
-    height: 158px;
+    height: 166px;
     width: 350px;
     border-radius: 4px;
     background-color: #fff;
     box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
-    
+    position: relative;
+
 }
 
 .card-top{
     height: 110px;
     width: 350px;
-    display: flex;
-    flex-wrap: wrap;
     border-radius: 4px 4px 0 0;
-
-
 }
 
 .card-top:hover{
     background-color: rgb(247, 243, 243) ;
-
 }
 
 .card-img{
@@ -45,24 +45,26 @@ body{
     font-weight: 500;
     padding: 16px 16px 4px 16px;
     user-select: auto;
-    /* user-select: pointer; */
-
 }
+
 .card-content{
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     color: grey;
     padding: 0px 16px;
-    /* user-select: pointer; */
 
 }
 
 .card-footer{
-    display: flex;
-    flex-wrap: wrap;
     padding: 8px;
-}
+    height: 40px;
+    width: 350px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+   }
+
 .btn1{
     color: #6200ee;
     font-size: 14px;
@@ -80,13 +82,10 @@ body{
 
 .btn1:hover{
     background-color: #ede1fd;
-    /* opacity: 0.1; */
      color: #6200ee; 
 }
 
 .icon-div{
-    display: flex;
-    flex-wrap: wrap;
     margin: 0 8px ;
 }
   
@@ -96,14 +95,26 @@ body{
     height: 30px;
     border-radius: 30px;
     margin: 0 5px ;
-
- 
-  
 }
 
+.basic-card{
+    height: 350px;
 
 
+}
+.basic-card-image-size{
+    width: 350px;
+    height: 175px;
+}
 
+.card-content-box{
+    height: 90px;
+    width: 350px;
 
+}
+.card-content-p{
+    font-weight: 400;
+    margin: 10px 0 8px  0;
+}
 
   
