--- a/style.css
+++ b/style.css
@@ -58,14 +58,13 @@ body{
     height: 40px;
     width: 350px;
     position: absolute;
-    
     bottom: 0;
     left: 0;
+
 }
+
 .flex-end{
     justify-content: center;
-    
-
 }
 
 .btn1{
@@ -125,4 +124,8 @@ body{
 
 .pad{
     padding: 0 0 8px 0;
+}
+
+.color-white{
+    color: #fff;
 }
