--- a/drawer/style.css
+++ b/drawer/style.css
@@ -1,1 +1,70 @@
-/* #6200ee */
+
+*{
+    margin: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+body{
+    background-color: rgb(248, 248, 248);
+}
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+.drawer{
+    width: 256px;
+    height: 286px;
+    box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+    margin: 150px auto;
+    background-color: #fff;
+}
+.drawer-head{
+    padding: 16px 16px 4px 16px;
+}
+.heading{
+    font-size: 20px;
+    font-weight:500;
+}
+.subtitle{
+    font-size: 14px;
+    font-weight: 400;
+    color: gray;
+
+}
+.drawer-content{
+    padding: 0 8px 8px 8px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    list-style: none;
+}
+
+.drawer-list-items{
+    margin: 0 0 8px 0;
+    padding: 8px;
+    border-radius: 4px;
+    color: rgba(0,0,0,.87);
+    text-decoration: none;
+    list-style: none;
+    justify-content: start;
+    align-items: center;
+    height: 30px;
+    width: 220px;
+}
+.drawer-list-items:hover{
+    background-color: rgb(248, 248, 248);
+
+}
+.drawer-list-items:active{
+    background-color: rgba(98, 0, 238,0.1) ;
+    /* opacity: 0.1; */
+    color: #6200ee ;
+
+}
+.icons{
+    border: 2px solid black;
+    width: 24px;
+    height: 24px;
+    margin-right: 32px;
+
+}
