--- a/drawer/style.css
+++ b/drawer/style.css
@@ -49,10 +49,11 @@ body{
     justify-content: start;
     align-items: center;
     height: 30px;
-    width: 220px;
+    width: 230px;
+    
 }
 .drawer-list-items:hover{
-    background-color: rgb(248, 248, 248);
+    background-color: rgba(128, 128, 128,0.1);
 
 }
 .drawer-list-items:active{
@@ -62,9 +63,8 @@ body{
 
 }
 .icons{
-    border: 2px solid black;
-    width: 24px;
-    height: 24px;
-    margin-right: 32px;
+    margin: 8px 32px 8px 8px;
+    
+   
 
 }
